--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>find-the-pairs</title>
   </head>
   <body>
+    <div id="app"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
